[package]
name = "overlap-add-middle"
version = "0.1.0"
authors = ["Tetsu Takizawa <tetsu.takizawa5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dxx = { path = "../dxx" }
anyhow = "1.0"
structopt = "0.3"